test/domains/diten/domainReassignAlias.good
A1=1 2 3 4 5 6 7 8 9 10
A2=1 2 3 4 5 6 7 8 9 10
A1=1 2 3 4 5 6 7 8 9 10 0
domainReassignAlias.chpl:10: error: attempt to dereference nil
